# portfolio

./: MAINTENANCE.md  package-lock.json  package.json
app/: globals.css  layout.tsx
app/beacon/: page.tsx
app/components/: article-layout.tsx  bilingual-body.tsx  footer.tsx  header.tsx  hero.tsx  mdx-content.tsx  section-wrapper.tsx
app/node/: page.tsx
app/node/[slug]/: page.tsx
app/pow/: page.tsx
app/signal/: page.tsx
app/signal/[slug]/: page.tsx
content/signal/: agi-era-survival-guide.en.mdx  agi-era-survival-guide.mdx  producer-perspective.en.mdx  producer-perspective.mdx  stop-learning-start-building.en.mdx  stop-learning-start-building.mdx  what-abilities-should-you-cultivate.en.mdx  what-abilities-should-you-cultivate.mdx  what-values-should-you-cultivate.en.mdx  what-values-should-you-cultivate.mdx  why-not-tutoring.en.mdx  why-not-tutoring.mdx  我为什么不推荐大学生家教？.mdx
lib/: mdx.ts
tools/article-cli/: Cargo.toml
tools/article-cli/src/: cli.rs  clock.rs  config.rs  indexer.rs  main.rs  mdx.rs  prompts.rs
