[package]
name = "article-cli"
version = "0.1.0"
edition = "2021"
description = "khlilo blog article scaffolding CLI"

[[bin]]
name = "article-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
regex = "1"
colored = "2"

[profile.release]
lto = true
strip = true
